plugins {
    id 'java'
    id 'idea'
    id 'org.jetbrains.kotlin.jvm' version '2.3.21'
//    id 'org.springframework.boot' version '3.2.5'
//    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'io.github.tpalucki'
version = '0.0.1-SNAPSHOT'

java {
}

repositories {
    mavenCentral()
}

// 1. Enable preview for Java compilation tasks
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}
// 2. Enable preview for application execution tasks
tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
// 3. Enable preview for JUnit / Test tasks
tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += '--enable-preview'
}

dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation(platform('org.junit:junit-bom:5.10.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testRuntimeOnly('org.junit.platform:junit-platform-launcher')

    testImplementation 'org.mockito:mockito-core:5.11.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
kotlin {
    jvmToolchain(25)
}

//tasks.named('test') {
//    useJUnitPlatform()
//}